Add customer signals domain
